[build-system]
requires = ["hatchling >= 1.26", "pandas >= 2.0.3", "numpy >= 1.25.1" , "statsmodels >= 0.14.0" , "scikit-learn >= 1.3.0" , "scipy >= 1.11.1" ]
build-backend = "hatchling.build"

[project]
name = "pyitu"
version = "0.1.0"
authors = [
  { name="Richard Tjörnhammar", email="richard.tjornhammar@gmail.com" },
]
description = "A collection of ITU based propagation models"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/richardtjornhammar/pyitu"
Issues = "https://github.com/richardtjornhammar/pyitu"
